BUG 11398: yAxis changes * 1 second after load, it will shift position to accomodate any visible row labels. * You can no longer move it outside of the chart area * You can no longer move it to take up more than 50% of the chart area. * Dragging it will trigger a temporary view, and you can save the position.
QA: Verify that all the bullet points above work as expected.

--- a/app/styles/charts.sass
+++ b/app/styles/charts.sass
@@ -337,10 +337,14 @@
 
   // No legend or bottom legend.
   .chartOuterContainer
-    top: 2em
+    top: 0em
     left: 0em
     right: 0em
     bottom: 0em
+
+  &.hasYLabelVert
+    .chartOuterContainer
+      top: 2em
 
   &.hasTopLegend
     .chartOuterContainer
